clusters/k3s-cluster/mealie/mealie-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mealie
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  namespace: mealie
spec:
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
    spec:
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie:v2.7.1
          resources:
            limits:
              memory: "1024Mi"
              cpu: "500m"
          ports:
            - containerPort: 9000
          volumeMounts:
            - mountPath: /app/data
              name: mealiepvc
      volumes:
        - name: mealiepvc
          persistentVolumeClaim:
            claimName: mealiepvc
---
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: mealie
spec:
  selector:
    app: mealie
  ports:
    - port: 9000
      targetPort: 9000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie
  namespace: mealie
  labels:
    name: mealie
spec:
  rules:
    - host: mealie.jacobbanghart.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: mealie
                port:
                  number: 9000
